@@ -1,5 +1,5 @@
 
-R version 3.4.0 Patched (2017-05-19 r72718) -- "You Stupid Darkness"
+R version 3.4.0 Patched (2017-05-19 r72708) -- "You Stupid Darkness"
 Copyright (C) 2017 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -210,20 +210,20 @@ c(3217, 205887, 3294199, 105414357, 3373259426, 107944301636,
 > (fB.60 <- formatBin(i16.60 <- mpfr(0:16, 60)))
  [1] +0b0.00000000000000000000000000000000000000000000000000000000000p+0
  [2] +0b1.00000000000000000000000000000000000000000000000000000000000p+0
- [3] +0b2.00000000000000000000000000000000000000000000000000000000000p+0
- [4] +0b3.00000000000000000000000000000000000000000000000000000000000p+0
- [5] +0b4.00000000000000000000000000000000000000000000000000000000000p+0
- [6] +0b5.00000000000000000000000000000000000000000000000000000000000p+0
- [7] +0b6.00000000000000000000000000000000000000000000000000000000000p+0
- [8] +0b7.00000000000000000000000000000000000000000000000000000000000p+0
- [9] +0b8.00000000000000000000000000000000000000000000000000000000000p+0
-[10] +0b9.00000000000000000000000000000000000000000000000000000000000p+0
-[11] +0ba.00000000000000000000000000000000000000000000000000000000000p+0
-[12] +0bb.00000000000000000000000000000000000000000000000000000000000p+0
-[13] +0bc.00000000000000000000000000000000000000000000000000000000000p+0
-[14] +0bd.00000000000000000000000000000000000000000000000000000000000p+0
-[15] +0be.00000000000000000000000000000000000000000000000000000000000p+0
-[16] +0bf.00000000000000000000000000000000000000000000000000000000000p+0
+ [3] +0b1.00000000000000000000000000000000000000000000000000000000000p+1
+ [4] +0b1.10000000000000000000000000000000000000000000000000000000000p+1
+ [5] +0b1.00000000000000000000000000000000000000000000000000000000000p+2
+ [6] +0b1.01000000000000000000000000000000000000000000000000000000000p+2
+ [7] +0b1.10000000000000000000000000000000000000000000000000000000000p+2
+ [8] +0b1.11000000000000000000000000000000000000000000000000000000000p+2
+ [9] +0b1.00000000000000000000000000000000000000000000000000000000000p+3
+[10] +0b1.00100000000000000000000000000000000000000000000000000000000p+3
+[11] +0b1.01000000000000000000000000000000000000000000000000000000000p+3
+[12] +0b1.01100000000000000000000000000000000000000000000000000000000p+3
+[13] +0b1.10000000000000000000000000000000000000000000000000000000000p+3
+[14] +0b1.10100000000000000000000000000000000000000000000000000000000p+3
+[15] +0b1.11000000000000000000000000000000000000000000000000000000000p+3
+[16] +0b1.11100000000000000000000000000000000000000000000000000000000p+3
 [17] +0b1.00000000000000000000000000000000000000000000000000000000000p+4
 > stopifnot(
 +     identical(sub("00p","p", spr(i16.60, bits = 10)),
@@ -231,28 +231,22 @@ c(3217, 205887, 3294199, 105414357, 3373259426, 107944301636,
 +     identical(spr(i16.60, bits = 4),
 +               spr(i16.04, bits = 4))
 +     ,
-+     ## identical(i16.04, mpfr(fB.04)) # not TRUE, but this is
 +     all.equal(i16.04, mpfr(fB.04), tolerance = 0)
 +     ,
-+     TRUE ## FAILS   identical(i16.60, mpfr(fB.60))
++     all.equal(i16.60, mpfr(fB.60), tolerance = 0)
 + )
 > 
-> ## FIXME: still not ok
-> try( mpfr(fB.60) )
-Error in mpfr.default(x, base = 2, precBits = precBits, ...) : 
-  str2mpfr1_list(x, *): x[3] cannot be made into MPFR
 > ## not even this one
-> try( mpfr(formatBin(mpfr(2, precBits = 60))) )
-Error in mpfr.default(x, base = 2, precBits = precBits, ...) : 
-  str2mpfr1_list(x, *): x[1] cannot be made into MPFR
+> two <- mpfr(2, precBits = 60)
+> stopifnot(identical(two, mpfr(formatBin(two))))
 > 
 > 
 > cat('Time elapsed: ', proc.time(),'\n') # "stats"
-Time elapsed:  0.621 0.084 0.774 0.001 0.002 
+Time elapsed:  0.538 0.091 0.626 0.002 0 
 > 
 > if(!interactive()) warnings()
 NULL
 > 
 > proc.time()
    user  system elapsed 
-  0.622   0.086   0.775 
+  0.541   0.091   0.627 
